fix ad spacing

--- a/app/styles/layout/base/_nav-carousel.scss
+++ b/app/styles/layout/base/_nav-carousel.scss
@@ -20,8 +20,8 @@
     h3 {
       background-color: transparentize($red, .5);
       color: $white;
-      top: 2.5em;
-      padding: 1em;
+      bottom: 10%;
+      padding: .5em;
       position: absolute;
       text-align: left;
       width: 200px;
