--- a/app/styles/layout/story/_story-content.scss
+++ b/app/styles/layout/story/_story-content.scss
@@ -257,18 +257,3 @@
     text-align: center;
   }
 }
-
-.ad-container {
-  margin: 0 auto;
-}
-
-.box-ad {
-  float: right;
-  height: 250px;
-  width: 350px;
-}
-
-.banner-ad {
-  height: 90px;
-  width: 728px;
-}
